--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
       - .env
     depends_on:
       - mysql
+  queue:
+    build:
+      context: .
+    container_name: laravel_queue
+    user: "1000:1000"
+    restart: always
+    healthcheck:
+      test: ["CMD", "healthcheck-queue"]
+      start_period: 10s
+    command: "php artisan queue:work"
+    volumes:
+      -   ./:/var/www/
+    depends_on:
+      app:
+        condition: service_started
+      mysql:
+        condition: service_healthy
   mysql:
     image: mysql:8.0
     container_name: laravel_mysql
@@ -26,6 +43,12 @@ services:
         MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
   nginx:
     container_name: 'laravel_nginx'
     image: "nginx:stable-alpine"
@@ -37,4 +60,13 @@ services:
       - ./docker-compose/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+  mailhog:
+    container_name: mailhog
+    image: mailhog/mailhog
+    logging:
+      driver: none
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+
 
